megamenu overflow x fix

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/megamenusolution/_megaMenuSolution.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/megamenusolution/_megaMenuSolution.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    // overflow: auto;
+    overflow-x: hidden;
     background: $color-white;
     z-index: 11;
 
